--- a/html/login.html
+++ b/html/login.html
@@ -20,8 +20,8 @@
       </div>
 
       <div class="botoes">
-        <a href="index.html" class="header-buttom">Home</a>
-        <a href="index.html#Sobre" class="header-buttom">Sobre</a>
+        <a href="/index.html" class="header-buttom">Home</a>
+        <a href="/index.html#Sobre" class="header-buttom">Sobre</a>
         <a href="login.html" id="login" class="header-buttom">Login</a>
         <a href="141284182419249124819.html" class="header-buttom" id="adm"
           >Admin</a
