--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ordy Dynamic</title>
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,8 +22,8 @@
       <div class="botoes">
         <a href="index.html" class="header-buttom">Home</a>
         <a href="#Sobre" class="header-buttom">Sobre</a>
-        <a href="login.html" id="login" class="header-buttom">Login</a>
-        <a href="141284182419249124819.html" class="header-buttom" id="adm"
+        <a href="html/login.html" id="login" class="header-buttom">Login</a>
+        <a href="html/141284182419249124819.html" class="header-buttom" id="adm"
           >Admin</a
         >
       </div>
