--- a/html/141284182419249124819.html
+++ b/html/141284182419249124819.html
@@ -18,9 +18,10 @@
       <div class="icone">
         <a href="index.html" alt="home"><img src="" /></a>
       </div>
+
       <div class="botoes">
-        <a href="index.html" class="header-buttom">Home</a>
-        <a href="index.html#Sobre" class="header-buttom">Sobre</a>
+        <a href="/index.html" class="header-buttom">Home</a>
+        <a href="/index.html#Sobre" class="header-buttom">Sobre</a>
         <a href="login.html" id="login" class="header-buttom">Login</a>
         <a href="141284182419249124819.html" class="header-buttom" id="adm"
           >Admin</a
