--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ordy Dynamic</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,13 +17,31 @@
   <body id="home">
     <header>
       <div class="icone">
-        <a href="index.html" alt="home"><img src="" /></a>
+        <a href="https://feliperebula.github.io/Ordy-Dynamics" alt="home"
+          ><img src=""
+        /></a>
       </div>
       <div class="botoes">
-        <a href="index.html" class="header-buttom">Home</a>
-        <a href="#Sobre" class="header-buttom">Sobre</a>
-        <a href="html/login.html" id="login" class="header-buttom">Login</a>
-        <a href="html/141284182419249124819.html" class="header-buttom" id="adm"
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics"
+          class="header-buttom"
+          >Home</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics#Sobre"
+          class="header-buttom"
+          >Sobre</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics/html/login.html"
+          id="login"
+          class="header-buttom"
+          >Login</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics/html/141284182419249124819.html"
+          class="header-buttom"
+          id="adm"
           >Admin</a
         >
       </div>
