--- a/141284182419249124819.html
+++ b/141284182419249124819.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="/script.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,14 +16,32 @@
   <body>
     <header>
       <div class="icone">
-        <a href="index.html" alt="home"><img src="" /></a>
+        <a href="https://feliperebula.github.io/Ordy-Dynamics" alt="home"
+          ><img src=""
+        /></a>
       </div>
 
       <div class="botoes">
-        <a href="/index.html" class="header-buttom">Home</a>
-        <a href="/index.html#Sobre" class="header-buttom">Sobre</a>
-        <a href="login.html" id="login" class="header-buttom">Login</a>
-        <a href="141284182419249124819.html" class="header-buttom" id="adm"
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics"
+          class="header-buttom"
+          >Home</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics#Sobre"
+          class="header-buttom"
+          >Sobre</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics/html/login.html"
+          id="login"
+          class="header-buttom"
+          >Login</a
+        >
+        <a
+          href="https://feliperebula.github.io/Ordy-Dynamics/html/141284182419249124819.html"
+          class="header-buttom"
+          id="adm"
           >Admin</a
         >
       </div>
