--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           >Sobre</a
         >
         <a
-          href="https://feliperebula.github.io/Ordy-Dynamics/html/login.html"
+          href="https://feliperebula.github.io/Ordy-Dynamics/login.html"
           id="login"
           class="header-buttom"
           >Login</a
         >
         <a
-          href="https://feliperebula.github.io/Ordy-Dynamics/html/141284182419249124819.html"
+          href="https://feliperebula.github.io/Ordy-Dynamics/141284182419249124819.html"
           class="header-buttom"
           id="adm"
           >Admin</a
