--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
       <section id="Sobre"></section>
       <h2>Sobre nós</h2>
       <p>
-        A Ordy Dynamics foi fundada com o objetivo de estruturar e apoiar
+        Fundada em <b id="vermelho">27</b>/<b id="vermelho">09</b>/<b
+          id="vermelho"
+          >2005</b
+        >. Ordy Dynamics foi fundada com o objetivo de estruturar e apoiar
         operações farmacêuticas por meio de gestão eficiente e processos bem
         definidos. Desde o início, a empresa adotou uma abordagem focada em
         controle, padronização e desempenho contínuo. Sob a liderança de Marcus
