--- a/141284182419249124819.html
+++ b/141284182419249124819.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body id="adm2">
     <header>
       <div class="icone">
         <a href="https://feliperebula.github.io/Ordy-Dynamics" alt="home"
