--- a/141284182419249124819.html
+++ b/141284182419249124819.html
@@ -58,15 +58,17 @@
       Nos últimos três dias, surgiram novos incidentes envolvendo o grupo
       associado apelidado de Transtornados. Os indivíduos do grupo demonstram:
       <br />
-      •Insensibilidade anormal à dor. <br />
-      •Fanatismo a figura chamada de “O Diabo”. <br />
-      •Tendência ao consumo de rituais de sangue. <br />
-      •Alta impulsividade e descontrole durante manuseio de armas e corpos
-      humanos testados. <br />
+      <b id="vermelho">•</b>Insensibilidade anormal à dor. <br />
+      <b id="vermelho">•</b>Fanatismo a figura chamada de “<b id="vermelho"
+        >O Diabo</b
+      >”. <br />
+      <b id="vermelho">•</b>Tendência ao consumo de rituais de sangue. <br />
+      <b id="vermelho">•</b>Alta impulsividade e descontrole durante manuseio de
+      armas e corpos humanos testados. <br />
       A Ordy Dynamics mantém parceria apenas operacional, porém observamos
       sinais de crescente independência ideológica por parte deles.
       <br /><br />
-      Relatório parcial: <br />
+      <b id="vermelho">RELATÓRIO PARCIAL</b>: <br />
       “Eles começaram a marcar as paredes da sua sala disponibilizada pela Ordy
       com símbolos. Dizem que “Ele” está cada vez mais perto. Não sei se estão
       falando de Marcus… ou da coisa que eles adoram.” <br />
@@ -77,51 +79,65 @@
       1.O composto é entregue periodicamente pelos Transtornados. Eles afirmam
       que “coletam” nos rituais de sangue e seus experimentos, realizados em
       território remoto do Norte do Amazonas. <br />
-      2. Propriedades observadas: <br />
-      • Reage fortemente a biomassa humana <br />
-      • Aumenta ritmo cardíaco até níveis fatais <br />
-      • Produz alucinações de “garras, dentes e carne viva” <br />
-      • Induz a uma transformação completa de um Zumbi de sangue além do
-      matadouro <br />
-      3. Observações urgentes Os cultistas NÃO permitem que a Ordy saiba onde
-      colhem a substância. Mas um dos frascos trazia areia úmida e folhas
-      tropicais. <br />
+      2. <b id="vermelho">Propriedades observadas</b> <br />
+      <b id="vermelho">•</b> Reage fortemente a biomassa humana <br />
+      <b id="vermelho">•</b> Aumenta ritmo cardíaco até níveis fatais <br />
+      <b id="vermelho">•</b> Produz alucinações de “garras, dentes e carne viva”
+      <br />
+      <b id="vermelho">•</b> Induz a uma transformação completa de um Zumbi de
+      sangue além do matadouro <br />
+      3. <b id="vermelho">Observações urgentes</b>: Os cultistas NÃO permitem
+      que a Ordy saiba onde colhem a substância. Mas um dos frascos trazia areia
+      úmida e folhas tropicais. <br />
     </p>
     <p class="doc-des" id="doc-3">
       “Marcus, eles não são mais aliados. Eles estão guiando você até lá. Até o
       lugar que chamam de RUÍNAS. Eles querem você para o ritual.” Querem que
-      você se torne ELE 01°56’42”N 61°21’18”W
+      você se torne <b id="vermelho">ELE</b> 01°56’42”N 61°21’18”W
     </p>
     <p class="doc-des" id="doc-4">
-      SUJEITO UTILIZADO NO RITUAL: <br />
-      • Sexo: feminino • Estado: falência orgânica avançada <br />
-      • Consciência: preservada durante todo o processo <br />
-      • Condição: incapaz de sobreviver sem intervenção imediata Anotação
-      lateral: “Ela implorava para continuar. O Sangue ouviu.” <br />DESCRIÇÃO
-      DO PROCEDIMENTO: O ritual seguiu um padrão equivocado, porém comum entre
-      cultistas de Sangue: <br />
-      • Uso excessivo de cortes abertos • Coleta contínua de sangue <br />
-      • Manutenção do batimento cardíaco como símbolo central <br />
-      • Ausência de encerramento ritualístico Segundo os princípios conhecidos
-      do Paranormal: O Sangue reage a excesso, dor e apego. <br />
-      MOMENTO DE RUPTURA: O ritual ultrapassou o limite quando: <br />
-      • O corpo cessou funções vitais convencionais • O Sangue continuou ativo
+      <b id="vermelho">SUJEITO UTILIZADO NO RITUAL</b>: <br />
+      <b id="vermelho">•</b> Sexo: feminino <b id="vermelho">•</b> Estado:
+      falência orgânica avançada
       <br />
-      • A carne passou a responder sem comando biológico Registro de áudio
-      transcrito (origem desconhecida): “Ela não morreu. Ela se espalhou pela
-      sala.” A identidade humana começou a se desfazer. A dor permaneceu. <br />
-      RESULTADO: ￭￭￭￭￭￭￭￭ ￭￭￭￭￭￭: A entidade formada apresenta: <br />
-      • Apresentam flores que sugam sangue fresco se tornando mais fortes(sendo
-      necessário todo dia) <br />
-      • Comportamento repetitivo ligado à dor original <br />
-      • Reação extrema à presença de Sangue fresco <br />
-      • Incapacidade de cessar a própria existência. <br />
-      CONSEQUÊNCIAS OBSERVADAS: <br />
-      • Todos os envolvidos no ritual morreram ou desapareceram <br />
-      • O local permanece contaminado <br />
-      • Tentativas de destruição direta falharam <br />
-      • A entidade se regenera sempre que há Sangue disponível * Frágil contra
-      uso de fogo constante ou algo que fragilize sua s flores desabrochadas.
+      <b id="vermelho">•</b> Consciência: preservada durante todo o processo
+      <br />
+      <b id="vermelho">•</b> Condição: incapaz de sobreviver sem intervenção
+      imediata Anotação lateral: “Ela implorava para continuar. O Sangue ouviu.”
+      <br /><b id="vermelho">DESCRIÇÃO DO PROCEDIMENTO</b>: O ritual seguiu um
+      padrão equivocado, porém comum entre cultistas de Sangue: <br />
+      <b id="vermelho">•</b> Uso excessivo de cortes abertos
+      <b id="vermelho">•</b> Coleta contínua de sangue <br />
+      <b id="vermelho">•</b> Manutenção do batimento cardíaco como símbolo
+      central <br />
+      <b id="vermelho">•</b> Ausência de encerramento ritualístico Segundo os
+      princípios conhecidos do Paranormal: O Sangue reage a excesso, dor e
+      apego. <br />
+      <b id="vermelho">MOMENTO DE RUPTURA</b>: O ritual ultrapassou o limite
+      quando: <br />
+      <b id="vermelho">•</b> O corpo cessou funções vitais convencionais
+      <b id="vermelho">•</b> O Sangue continuou ativo
+      <br />
+      <b id="vermelho">•</b> A carne passou a responder sem comando biológico
+      Registro de áudio transcrito (origem desconhecida): “Ela não morreu. Ela
+      se espalhou pela sala.” A identidade humana começou a se desfazer. A dor
+      permaneceu. <br />
+      <b id="vermelho">RESULTADO</b>: <b id="vermelho">￭￭￭￭￭￭￭￭ ￭￭￭￭￭￭</b>: A
+      entidade formada apresenta: <br />
+      <b id="vermelho">•</b> Apresentam flores que sugam sangue fresco se
+      tornando mais fortes(sendo necessário todo dia) <br />
+      <b id="vermelho">•</b> Comportamento repetitivo ligado à dor original
+      <br />
+      <b id="vermelho">•</b> Reação extrema à presença de Sangue fresco <br />
+      <b id="vermelho">•</b> Incapacidade de cessar a própria existência. <br />
+      <b id="vermelho">CONSEQUÊNCIAS OBSERVADAS</b>: <br />
+      <b id="vermelho">•</b> Todos os envolvidos no ritual morreram ou
+      desapareceram <br />
+      <b id="vermelho">•</b> O local permanece contaminado <br />
+      <b id="vermelho">•</b> Tentativas de destruição direta falharam <br />
+      <b id="vermelho">•</b> A entidade se regenera sempre que há Sangue
+      disponível * Frágil contra uso de fogo constante ou algo que fragilize sua
+      s flores desabrochadas.
     </p>
   </body>
 </html>
